modified:   output-user/api/openapi.yaml 	modified:   output-user/controllers/User.js 	modified:   output-user/service/UserService.js
